--- a/client/src/Components/Navbar/Navbar.scss
+++ b/client/src/Components/Navbar/Navbar.scss
@@ -13,11 +13,14 @@ header {
   top: 0;
   width: 100%;
   display: flex;
+  // position: absolute;
+  z-index:100;
   display: -webkit-flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 40px;
   background-color: #fff;
+  
   box-shadow: 0px 8px 7px -11px #000;
   -webkit-box-shadow: 0px 8px 7px -11px #000;
 }
@@ -56,6 +59,7 @@ header {
   display: flex;
   display: -webkit-flex;
   align-items: center;
+  z-index:200;
   -webkit-align-items: center;
 }
 .nav:after {
@@ -105,6 +109,11 @@ header {
   opacity: 1;
   width: 100%;
 }
+
+.nav-heading{
+  font-weight: bold;
+  text-decoration: none;
+}
 .nav-content li a::after {
   opacity: 0;
   content: "";
@@ -139,8 +148,9 @@ header {
   display: none;
 }
 .banner {
-  background: url("https://www.yudiz.com/codepen/hero-banner/banner.png")
-    no-repeat center center / 100%;
+//   background: url("https://www.yudiz.com/codepen/hero-banner/banner.png")
+    // no-repeat center center / 100%;
+    // background: url("../../public/images/pic.jpg") no repeat center center / 100%;
   width: 100%;
   height: 100%;
 }
@@ -149,6 +159,26 @@ header {
   display: flex;
   align-items: center;
   -webkit-align-items: center;
+}
+
+.banner-image{
+    background: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 1));
+  background-size:cover;
+  background-position: center;
+  object-position: center;
+  width: 100%;
+  position: absolute;
+  object-fit: cover;
+  height: 100%;
+  top:0;
+  right:0;
+  left:0;
+  z-index: -1;
+  -webkit-filter: blur(2px); //change the value according to what suits the best
+  -moz-filter: blur(3px); //change the value according to what suits the best
+  -o-filter: blur(3px); //change the value according to what suits the best
+  -ms-filter: blur(3px); //change the value according to what suits the best
+  filter: blur(3px); 
 }
 .banner-content h1 {
   color: #3d4244;
